--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-# Build artifacts
+# Compiled binaries
 *.o
+*.a
+*.so
+*.dylib
+*.dll
 *.exe
-*.out
 a.out
+core
+*.out
 
 # Raylib libraries
 libraylib.so
